ensure live links scroll works on mobile

--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -138,23 +138,6 @@ category: Components
 	z-index: 100;
 }
 
-.live-player--open .live-player:after {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 40px;
-	background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,.7) 100%);
-	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(0,0,0,0)),color-stop(100%,rgba(0,0,0,.7)));
-	background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,.7) 100%);
-	background: -o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,.7) 100%);
-	background: -ms-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,.7) 100%);
-	background: linear-gradient(to bottom,rgba(0,0,0,0) 0%,rgba(0,0,0,.7) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#000000', GradientType=0);
-	content: " ";
-	z-index: 100;
-}
-
 // container for the live stream section of the live player
 .live-stream {
 	display: block;
@@ -1132,7 +1115,7 @@ category: Components
 	display: block;
 	float: right;
 	width: 34px;
-	height: 58px;
+	height: 57px;
 	padding-top: 8px;
 	line-height: 1;
 	font-size: ms(6);
@@ -1158,21 +1141,17 @@ category: Components
 		margin: 0;
 		border-top: 1px solid $secondary-border;
 	}
-}
 
-.live-player--open .live-links {
-	visibility: visible;
-	display: block;
-	height: auto !important;
-	max-height: 48vh;
-	margin-top: 43px;
-	overflow: hidden;
-	overflow-y: scroll;
-	@include bp(small) {
-		max-height: 35vh;
-		overflow: hidden;
-		overflow-y: scroll;
-		-webkit-touch-overflow:scroll
+	.live-player--open & {
+		visibility: visible;
+		display: block;
+		height: auto !important;
+		max-height: 48vh;
+		margin-top: 43px;
+		@include bp(small) {
+			max-height: 35vh;
+			overflow: hidden;
+		}
 	}
 }
 
