--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -4561,22 +4561,6 @@ category: Components
   content: " ";
   z-index: 100; }
 
-.live-player--open .live-player:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 40px;
-  background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, rgba(0, 0, 0, 0.7)));
-  background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-  background: -o-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-  background: -ms-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#000000', GradientType=0);
-  content: " ";
-  z-index: 100; }
-
 .live-stream {
   display: block;
   width: 100%;
@@ -5550,7 +5534,7 @@ category: Components
   display: block;
   float: right;
   width: 34px;
-  height: 58px;
+  height: 57px;
   padding-top: 8px;
   line-height: 1;
   font-size: 2.02729em;
@@ -5573,21 +5557,16 @@ category: Components
       height: 100%;
       margin: 0;
       border-top: 1px solid #282827; } }
-
-.live-player--open .live-links {
-  visibility: visible;
-  display: block;
-  height: auto !important;
-  max-height: 48vh;
-  margin-top: 43px;
-  overflow: hidden;
-  overflow-y: scroll; }
-  @media screen and (min-width: 480px) {
-    .live-player--open .live-links {
-      max-height: 35vh;
-      overflow: hidden;
-      overflow-y: scroll;
-      -webkit-touch-overflow: scroll; } }
+  .live-player--open .live-links {
+    visibility: visible;
+    display: block;
+    height: auto !important;
+    max-height: 48vh;
+    margin-top: 43px; }
+    @media screen and (min-width: 480px) {
+      .live-player--open .live-links {
+        max-height: 35vh;
+        overflow: hidden; } }
 
 .live-link__song:before, .live-link__type--audio:before, .live-link__type--gallery:before, .live-link__type--image:before, .live-link__type--link:before, .live-link__type--standard:before, .live-link__type--video:before {
   width: 0;
